test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_6.snaphost
HTTP/2.0 200 OK
Content-Length: 39
Content-Type: application/json
Date: Mon, 31 Mar 2025 14:19:58 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=cfe2c65b603088ca4ca8cfc3d63bace4020256a0; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"172.183.215.67"}